--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@better-scroll/core": "^2.0.0-beta.2",
     "axios": "^0.19.0",
+    "better-scroll": "^1.11.1",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
     "stylus": "^0.54.7",
