--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "better-scroll": "^1.11.1",
+    "date-fns": "^2.7.0",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.24.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "swiper": "^5.0.4",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
