--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,10 @@
 				{
 					"libraryName": "mint-ui",
 					"style": true
-				}
+        },
+        {
+          "libraryName": "element-ui",
+          "styleLibraryName": "theme-chalk"
+        }
 			]]]
 }
