--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.11.1",
     "date-fns": "^2.7.0",
+    "element-ui": "^2.12.0",
     "mint-ui": "^2.2.12",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.24.0",
